Fix a scroll issue on Firefox

--- a/src/browser_action/css/_base.scss
+++ b/src/browser_action/css/_base.scss
@@ -12,10 +12,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 13px;
-  overflow:hidden;
 
   &::-webkit-scrollbar {
-      display: none;
+    display: none;
   }
 }
 
